--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -11,7 +11,7 @@ $beige-light: #D0D1CD;
 $beige-lighter: #EFF0EB;
 $charcoal-blue: #22223B;
 //our colours
-$raisin-black:#191b248f;
+$raisin-black:#191b24;
 $spacecadet:#22223B;
 $mountbatenpink:#8C7D8A;
 $mountbatenpinktransparent:#8c7d8a9f;
@@ -25,7 +25,7 @@ $family-cursive: "Pacifico", cursive;
 $grey-dark: $brown;
 $grey-light: $beige-light;
 $primary: $purple;
-$link: $pink;
+$link: $spacecadet;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
@@ -35,7 +35,19 @@ $navbar-item-color:$isabelline;
 $navbar-dropdown-item-hover-color:$silverpink;
 $navbar-dropdown-item-hover-background-color:$mountbatenpinktransparent;
 $navbar-burger-color:$isabelline;
+$navbar-item-hover-color:$mountbatenpink;
 
+
+//subnav styles
+$tabs-link-hover-color:$mountbatenpinktransparent;
+$tabs-link-hover-border-bottom-color:$mountbatenpinktransparent;
+$tabs-link-active-border-bottom-color:$mountbatenpink;
+$tabs-link-active-color:$mountbatenpink;
+$tabs-link-color:$isabelline;
+$tabs-border-bottom-color:$isabelline;
+$tabs-toggle-link-active-background-color:$mountbatenpink;
+$tabs-toggle-link-active-border-color:$mountbatenpink;
+$tabs-toggle-link-active-color:$mountbatenpink;
 // Update some of Bulma's component variables
 $body-background-color:$raisin-black;
 $control-border-width: 2px;
