--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10941,7 +10941,7 @@ a.navbar-item,
       padding: 18rem 1.5rem; } }
 
 
-.cardwork {
-  background-image: linear-gradient(-90deg, #22223bbb, #8c7d8ab4), url(./assets/1.jpg);
+html {
+  background-image: linear-gradient(-90deg, #22223b7c, #8c7d8a8a), url(./assets/1.jpg);
   background-size: cover;
 }
