--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -13,7 +13,7 @@ $charcoal-blue: #22223B;
 //our colours
 $raisin-black:#191b248f;
 $spacecadet:#22223B;
-$mountbatenpink:#8C7D8A;
+$mountbatenpink:#8c7d8a;
 $mountbatenpinktransparent:#8c7d8a9f;
 $silverpink:#D0B8B3;
 $isabelline:#F2E9E4;
