--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -90,3 +90,7 @@ $button-background-color:$mountbatenpink;
     background:$isabelline;
     border-radius: $radius;
 }
+
+#home-body{
+    background-color:$raisin-black;
+}
