--- a/client/src/index.css
+++ b/client/src/index.css
@@ -385,7 +385,7 @@ a.box:active {
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #22223B; }
 
 .button {
-  background-color: #8C7D8A;
+  background-color: #8c7d8a;
   border-color: #dbdbdb;
   border-width: 2px;
   color: #363636;
@@ -3995,7 +3995,7 @@ a.navbar-item,
   .navbar-link:hover,
   .navbar-link.is-active {
     background-color: #fafafa;
-    color: #8C7D8A; }
+    color: #8c7d8a; }
 
 .navbar-item {
   flex-grow: 0;
@@ -4525,7 +4525,7 @@ label.panel-block {
   .tabs li {
     display: block; }
     .tabs li.is-active a {
-      border-bottom-color: #8C7D8A;
+      border-bottom-color: #8c7d8a;
       color: #D0B8B3; }
   .tabs ul {
     align-items: center;
@@ -4586,9 +4586,9 @@ label.panel-block {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px; }
   .tabs.is-toggle li.is-active a {
-    background-color: #8C7D8A;
-    border-color: #8C7D8A;
-    color: #8C7D8A;
+    background-color: #8c7d8a;
+    border-color: #8c7d8a;
+    color: #8c7d8a;
     z-index: 1; }
   .tabs.is-toggle ul {
     border-bottom: none; }
@@ -7192,21 +7192,7 @@ html {
   overflow-y: scroll;
   text-rendering: optimizeLegibility;
   text-size-adjust: 100%; }
-  
-p {
-  /*color: #FA7C91;*/
-  font-weight: 700;
-}
-a {
-  /*color: #FA7C91;*/
-  cursor: pointer;
-  text-decoration: none; 
-  font-weight: 700;
-}
-  a strong {
-    color: currentColor; }
-  a:hover {
-    color: #363636; }
+
 article,
 aside,
 figure,
@@ -7306,7 +7292,7 @@ table th {
   color: #363636; }
 
 .button {
-  background-color: #8C7D8A;
+  background-color: #8c7d8a;
   border-color: #dbdbdb;
   border-width: 2px;
   color: #363636;
@@ -9634,7 +9620,7 @@ a.navbar-item,
   .navbar-link:hover,
   .navbar-link.is-active {
     background-color: #fafafa;
-    color: #8C7D8A; }
+    color: #8c7d8a; }
 
 .navbar-item {
   flex-grow: 0;
@@ -10382,47 +10368,6 @@ a.navbar-item,
     .section.is-large {
       padding: 18rem 1.5rem; } }
 
-
-      html {
-        /*background-image: linear-gradient(-90deg, #22223b7c, #8c7d8a8a), url(./assets/1.jpg);*/
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: center;
-        /*background-image: linear-gradient(rgba(140, 125, 138, 0.3), rgba(140, 125, 138, 0.3)), url(./assets/1.jpg)*/
-        background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(./assets/1.jpg)
-      }
-      .button {
-        background:rgba(140, 125, 138, 0.5);
-        color:#F8F4F1;
-        font-size: 1.25em;
-        border-color: #F8F4F1;
-        width: 50%
-      }
-      .button:hover {
-        background-color: rgba(248, 244, 241, 0.9);
-        color: #8c7d8a;
-        border-color: #8c7d8a;
-      }
-      .following a{
-        color: #F8F4F1;
-      }
-      .following:hover a{
-        color: #FA7C91;
-      }
-
-      .follow {
-        color: #D0B8B3;
-      }
-
-      .follow:hover {
-        color: #8c7d8a;
-      }
-
-      .section {
-        padding-top: 2rem;
-        padding-bottom: 1rem;
-      }
 .main {
   font-family: "Poppins", sans-serif; }
 
@@ -10440,3 +10385,19 @@ a.navbar-item,
   height: 50px;
   background: #F2E9E4;
   border-radius: 4px; }
+
+/* #home-body {
+  background-color: #191b24; } */
+  html {
+    /*background-image: linear-gradient(-90deg, #22223b7c, #8c7d8a8a), url(./assets/1.jpg);*/
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    /*background-image: linear-gradient(rgba(140, 125, 138, 0.3), rgba(140, 125, 138, 0.3)), url(./assets/1.jpg)*/
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(./assets/1.jpg)
+  }
+@media only screen and (max-width: 600px) {
+  html {
+    background-color: #191b24;
+    background-image: none; } }
