--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -94,3 +94,10 @@ $button-background-color:$mountbatenpink;
 #home-body{
     background-color:$raisin-black;
 }
+
+@media only screen and (max-width:600px) {
+  html {
+      background-color: $raisin-black;
+      background-image: none;
+    }
+  }
