--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -18,7 +18,7 @@ $mountbatenpinktransparent:#8c7d8a9f;
 $silverpink:#D0B8B3;
 $isabelline:#F2E9E4;
 $isabelline2:#F8F4F1;
-
+$xiketic: #0E0E1B;
 
 // Update Bulma's global variables
 $family-sans-serif: "Poppins", sans-serif;
@@ -119,7 +119,27 @@ body.light-mode {
     font-weight: 700;
     font-size: 18px;
   }
-  
+  body.light-mode .card-header {
+    background-color: $isabelline2;
+}
+body.light-mode .card-footer {
+    background-color: $isabelline2;
+    border-top-color:$isabelline2;
+}
+body.dark-mode .card-content {
+    background-color: $xiketic;
+}
+body.light-mode .tag {
+    background-color: $isabelline2;
+}
+body.light-mode .tabs li.is-active a {
+    color: $mountbatenpink;
+    border-bottom-color: $mountbatenpink;
+}
+body.light-mode .tabs li a {
+    color: $mountbatenpink;
+    border-bottom-color: $isabelline2;
+}
   body.dark-mode {
     background-color: $raisin-black;
     color: #dfdfdf;
@@ -177,6 +197,32 @@ body.light-mode {
   }
   body.dark-mode .box {
     background-color: $spacecadet;
+}
+body.dark-mode .card-header {
+    background-color: $spacecadet;
+}
+body.dark-mode .card-footer {
+    background-color: $spacecadet;
+    border-top-color:$spacecadet;
+}
+body.dark-mode .card-content {
+    background-color: $xiketic;
+}
+body.dark-mode .tag {
+    background-color: $spacecadet;
+    color: $isabelline2;
+}
+body.dark-mode .tabs li.is-active a {
+    color: #fa7c91;
+    border-bottom-color: $isabelline2;
+}
+body.dark-mode .tabs li a {
+    color: $mountbatenpink;
+    border-bottom-color: $mountbatenpink;
+}
+
+body.dark-mode .tabs ul {
+    border-bottom-color:$raisin-black;
 }
   .dark-mode-toggle {
     display: flex;
