--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -107,7 +107,6 @@ body {
     padding-top: 2rem;
     padding-bottom: 0.5rem;
 }
-
 body.light-mode {
     background-color: $isabelline;
     color: #333;
@@ -172,7 +171,7 @@ body.light-mode .tabs li a {
     position: fixed;
     top: 0;
     width: 100%;
-    display: flex;
+    /*display: flex;*/
     background-color: $silverpink;
     padding: 15px;
     margin-bottom: 10px;
