--- a/client/src/index.css
+++ b/client/src/index.css
@@ -262,7 +262,7 @@ th {
     text-align: inherit; }
 
 html {
-  /*background-color: #191b24;*/
+  background-color: white;
   font-size: 16px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -3366,7 +3366,7 @@ button.dropdown-item {
   justify-content: center;
   overflow: hidden;
   position: fixed;
-  z-index: 40; }
+  z-index: 1; }
   .modal.is-active {
     display: flex; }
 
@@ -4513,7 +4513,7 @@ label.panel-block {
     border-bottom-color: #F2E9E4;
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    color: #F2E9E4;
+    color: #8c7d8a;
     display: flex;
     justify-content: center;
     margin-bottom: -1px;
@@ -7183,7 +7183,7 @@ th {
     text-align: inherit; }
 
 html {
-  /*background-color: #191b24;*/
+  background-color: white;
   font-size: 16px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -10368,6 +10368,12 @@ a.navbar-item,
     .section.is-large {
       padding: 18rem 1.5rem; } }
 
+html {
+  min-height: 100%; }
+
+body {
+  min-height: 100vh; }
+
 .main {
   font-family: "Poppins", sans-serif; }
 
@@ -10381,23 +10387,180 @@ a.navbar-item,
   display: revert; }
 
 .graphic {
-  width: 200px;
-  height: 50px;
-  background: #F2E9E4;
-  border-radius: 4px; }
+  width: 180px;
+  height: 80px;
+  margin-right: 10px; }
 
-/* #home-body {
-  background-color: #191b24; } 
-  html {
-    //background-image: linear-gradient(-90deg, #22223b7c, #8c7d8a8a), url(./assets/1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    //background-image: linear-gradient(rgba(140, 125, 138, 0.3), rgba(140, 125, 138, 0.3)), url(./assets/1.jpg)
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(./assets/1.jpg)
-  }
+/*#home-body{
+    background-color:$raisin-black;
+}*/
+.section {
+  padding-top: 2rem;
+  padding-bottom: 0.5rem; }
+
+.toggle {
+  display: flex;
+  justify-content: center; }
+
+body.light-mode {
+  background-color: #F2E9E4;
+  color: #333;
+  transition: background-color 0.3s ease; }
+
+body.light-mode .box {
+  background-color: #f8f4f1; }
+
+body.light-mode button {
+  background-color: #D0B8B3; }
+
+body.light-mode button.toggle-icons {
+  background-color: #F2E9E4; }
+
+body.light-mode .following {
+  color: #F2E9E4;
+  font-weight: 700;
+  font-size: 18px; }
+
+body.light-mode .card-header {
+  background-color: #f8f4f1; }
+
+body.light-mode .card-footer {
+  background-color: #f8f4f1;
+  border-top-color: #f8f4f1; }
+
+body.dark-mode .card-content {
+  background-color: #0E0E1B; }
+
+body.light-mode .tag {
+  background-color: #f8f4f1; }
+
+body.light-mode .tabs li.is-active a {
+  color: #8c7d8a;
+  border-bottom-color: #8c7d8a; }
+
+body.light-mode .tabs li a {
+  color: #8c7d8a;
+  border-bottom-color: #f8f4f1; }
+
+body.dark-mode {
+  background-color: #191b24;
+  color: #dfdfdf; }
+  body.dark-mode .navbar {
+    background-color: #22223B; }
+  body.dark-mode .dark-mode-toggle > button {
+    color: #999; }
+    body.dark-mode .dark-mode-toggle > button:last-child {
+      color: lightblue; }
+  body.dark-mode .graphic {
+    /*background: $mountbatenpinktransparent;*/ }
+
+.navbar {
+  background-color: #a5918d; }
+
+.container {
+  padding: 20px; }
+
+body.dark-mode a {
+  color: #FA7C91; }
+
+body.dark-mode .following {
+  color: #8c7d8a;
+  font-weight: 700;
+  font-size: 18px; }
+
+body.dark-mode .comments {
+  color: #FA7C91; }
+
+body.dark-mode p {
+  color: #F2E9E4; }
+
+body.dark-mode button {
+  background-color: #22223B;
+  color: #F2E9E4; }
+
+body.dark-mode button.toggle-icons {
+  background-color: #191b24; }
+
+body.dark-mode .box {
+  background-color: #22223B; }
+
+body.dark-mode .card-header {
+  background-color: #22223B; }
+
+body.dark-mode .card-footer {
+  background-color: #22223B;
+  border-top-color: #22223B; }
+
+body.dark-mode .card-content {
+  background-color: #0E0E1B; }
+
+body.dark-mode .tag {
+  background-color: #22223B;
+  color: #f8f4f1; }
+
+body.dark-mode .tabs li.is-active a {
+  color: #FA7C91;
+  border-bottom-color: #f8f4f1; }
+
+body.dark-mode .tabs li a {
+  color: #8c7d8a;
+  border-bottom-color: #8c7d8a; }
+
+body.dark-mode .tabs ul {
+  border-bottom-color: #191b24; }
+
+.dark-mode-toggle {
+  display: flex;
+  margin: 0 auto; }
+  .dark-mode-toggle > button {
+    font-size: 1.2em;
+    background: none;
+    border: none;
+    color: #ffc400;
+    cursor: pointer;
+    transition: color 0.3s ease; }
+    .dark-mode-toggle > button:last-child {
+      color: #666; }
+    .dark-mode-toggle > button:focus {
+      outline: none; }
+
+.toggle-control {
+  position: relative;
+  padding: 0 4px;
+  display: flex;
+  align-items: center; }
+
+input[type='checkbox'].dmcheck {
+  width: 40px;
+  height: 10px;
+  background: #555;
+  position: relative;
+  border-radius: 5px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  vertical-align: 2px;
+  outline: none; }
+  input[type='checkbox'].dmcheck:checked + label {
+    left: 30px; }
+  input[type='checkbox'].dmcheck:focus-visible {
+    outline: solid 2px white; }
+  input[type='checkbox'].dmcheck + label {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    position: absolute;
+    left: 2px;
+    background: #fff;
+    opacity: 0.9;
+    background-color: #f6f6f6; }
+
 @media only screen and (max-width: 600px) {
-  html {
-    background-color: #191b24;
-    background-image: none; } }*/
+  /*html {
+      background-color: $raisin-black;
+      background-image: none;
+    }*/ }
