update comment padding

--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -217,6 +217,7 @@ body.light-mode {
     }
     .comment-section{
         color: $isabelline2;
+        padding-top: 12px;
     }
     .comment-date {
         color: $darktan;
