--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:ital,wght@1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
 
 
 // Set your brand colors
@@ -24,6 +24,7 @@ $xiketic: #0E0E1B;
 
 // Update Bulma's global variables
 $family-sans-serif: "Poppins", sans-serif;
+$family-serif: "Literata", serif;
 $family-cursive: "Pacifico", cursive;
 $grey-dark: $raisin-black;
 $grey-light: $beige-light;
@@ -84,11 +85,18 @@ body {
 
 .main{
     font-family: $family-sans-serif;
+    font-style: italic;
 }
 .main-title{
     font-family: "Pacifico", cursive;
 }
+.post-text {
 
+    font-weight: 400;
+    font-style: normal;
+    padding-bottom: 16px;
+    font-size: 1.2rem;
+}
 .card{
     border-radius: $radius;
 }
@@ -114,7 +122,7 @@ body {
     justify-content: center;
 }
 .post-title {
-    font-weight: 700;
+    font-weight: 500;
     font-size: 20px;
 }
 body.light-mode {
