--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -148,7 +148,7 @@ font-weight: 700;
 
 }
 body.light-mode .following {
-    color: $isabelline2;
+    color: #363636;
     font-weight: 700;
     font-size: 18px;
 }
@@ -156,11 +156,6 @@ body.light-mode button:hover {
     background-color: $isabelline2;
     color: $darktan;
     border-color: $darktan;
-}
-body.light-mode .following:hover {
-
-    color: $darktan;
-
 }
 body.light-mode button.toggle-icons{
 background-color: $isabelline;
